cmake_minimum_required (VERSION 3.10)
project (libnestopia)

add_compile_definitions(NST_NO_ZLIB)

set(LIBNESTOPIA_CORE_SOURCES
        source/core/NstApu.cpp
        source/core/NstAssert.cpp
        source/core/NstCartridge.cpp
        source/core/NstCartridgeInes.cpp
        source/core/NstCartridgeRomset.cpp
        source/core/NstCartridgeUnif.cpp
        source/core/NstCheats.cpp
        source/core/NstChecksum.cpp
        source/core/NstChips.cpp
        source/core/NstCore.cpp
        source/core/NstCpu.cpp
        source/core/NstCrc32.cpp
        source/core/NstFds.cpp
        source/core/NstFile.cpp
        source/core/NstHomebrew.cpp
        source/core/NstImage.cpp
        source/core/NstImageDatabase.cpp
        source/core/NstLog.cpp
        source/core/NstMachine.cpp
        source/core/NstMemory.cpp
        source/core/NstNsf.cpp
        source/core/NstPatcher.cpp
        source/core/NstPatcherIps.cpp
        source/core/NstPatcherUps.cpp
        source/core/NstPins.cpp
        source/core/NstPpu.cpp
        source/core/NstProperties.cpp
        source/core/NstRam.cpp
        source/core/NstSha1.cpp
        source/core/NstSoundPcm.cpp
        source/core/NstSoundPlayer.cpp
        source/core/NstSoundRenderer.cpp
        source/core/NstState.cpp
        source/core/NstStream.cpp
        source/core/NstTracker.cpp
        source/core/NstTrackerMovie.cpp
        source/core/NstTrackerRewinder.cpp
        source/core/NstVector.cpp
        source/core/NstVideoFilter2xSaI.cpp
        source/core/NstVideoFilterHqX.cpp
        source/core/NstVideoFilterNone.cpp
        source/core/NstVideoFilterNtsc.cpp
        source/core/NstVideoFilterNtscCfg.cpp
        source/core/NstVideoFilterScaleX.cpp
        source/core/NstVideoFilterxBR.cpp
        source/core/NstVideoRenderer.cpp
        source/core/NstVideoScreen.cpp
        source/core/NstXml.cpp
        source/core/NstZlib.cpp
        )

set(LIBNESTOPIA_API_SOURCES
        source/core/api/NstApiBarcodeReader.cpp
        source/core/api/NstApiCartridge.cpp
        source/core/api/NstApiCheats.cpp
        source/core/api/NstApiDipSwitches.cpp
        source/core/api/NstApiEmulator.cpp
        source/core/api/NstApiFds.cpp
        source/core/api/NstApiHomebrew.cpp
        source/core/api/NstApiInput.cpp
        source/core/api/NstApiMachine.cpp
        source/core/api/NstApiMovie.cpp
        source/core/api/NstApiNsf.cpp
        source/core/api/NstApiRewinder.cpp
        source/core/api/NstApiSound.cpp
        source/core/api/NstApiTapeRecorder.cpp
        source/core/api/NstApiUser.cpp
        source/core/api/NstApiVideo.cpp
        )

set(LIBNESTOPIA_BOARD_SOURCES
        source/core/board/NstBoardAcclaimMcAcc.cpp
        source/core/board/NstBoardAction53.cpp
        source/core/board/NstBoardAe.cpp
        source/core/board/NstBoardAgci.cpp
        source/core/board/NstBoardAveD1012.cpp
        source/core/board/NstBoardAveNina.cpp
        source/core/board/NstBoardAxRom.cpp
        source/core/board/NstBoardBandai24c0x.cpp
        source/core/board/NstBoardBandaiAerobicsStudio.cpp
        source/core/board/NstBoardBandaiDatach.cpp
        source/core/board/NstBoardBandaiKaraokeStudio.cpp
        source/core/board/NstBoardBandaiLz93d50.cpp
        source/core/board/NstBoardBandaiLz93d50ex.cpp
        source/core/board/NstBoardBandaiOekaKids.cpp
        source/core/board/NstBoardBenshengBs5.cpp
        source/core/board/NstBoardBmc110in1.cpp
        source/core/board/NstBoardBmc1200in1.cpp
        source/core/board/NstBoardBmc150in1.cpp
        source/core/board/NstBoardBmc15in1.cpp
        source/core/board/NstBoardBmc20in1.cpp
        source/core/board/NstBoardBmc21in1.cpp
        source/core/board/NstBoardBmc22Games.cpp
        source/core/board/NstBoardBmc31in1.cpp
        source/core/board/NstBoardBmc35in1.cpp
        source/core/board/NstBoardBmc36in1.cpp
        source/core/board/NstBoardBmc64in1.cpp
        source/core/board/NstBoardBmc72in1.cpp
        source/core/board/NstBoardBmc76in1.cpp
        source/core/board/NstBoardBmc800in1.cpp
        source/core/board/NstBoardBmc8157.cpp
        source/core/board/NstBoardBmc9999999in1.cpp
        source/core/board/NstBoardBmcA65as.cpp
        source/core/board/NstBoardBmcBallgames11in1.cpp
        source/core/board/NstBoardBmcCh001.cpp
        source/core/board/NstBoardBmcCtc65.cpp
        source/core/board/NstBoardBmcFamily4646B.cpp
        source/core/board/NstBoardBmcFk23c.cpp
        source/core/board/NstBoardBmcGamestarA.cpp
        source/core/board/NstBoardBmcGamestarB.cpp
        source/core/board/NstBoardBmcGolden190in1.cpp
        source/core/board/NstBoardBmcGoldenCard6in1.cpp
        source/core/board/NstBoardBmcGoldenGame260in1.cpp
        source/core/board/NstBoardBmcHero.cpp
        source/core/board/NstBoardBmcMarioParty7in1.cpp
        source/core/board/NstBoardBmcNovelDiamond.cpp
        source/core/board/NstBoardBmcPowerjoy84in1.cpp
        source/core/board/NstBoardBmcResetBased4in1.cpp
        source/core/board/NstBoardBmcSuper22Games.cpp
        source/core/board/NstBoardBmcSuper24in1.cpp
        source/core/board/NstBoardBmcSuper40in1.cpp
        source/core/board/NstBoardBmcSuper700in1.cpp
        source/core/board/NstBoardBmcSuperBig7in1.cpp
        source/core/board/NstBoardBmcSuperGun20in1.cpp
        source/core/board/NstBoardBmcSuperHiK300in1.cpp
        source/core/board/NstBoardBmcSuperHiK4in1.cpp
        source/core/board/NstBoardBmcSuperVision16in1.cpp
        source/core/board/NstBoardBmcT262.cpp
        source/core/board/NstBoardBmcVrc4.cpp
        source/core/board/NstBoardBmcVt5201.cpp
        source/core/board/NstBoardBmcY2k64in1.cpp
        source/core/board/NstBoardBtl2708.cpp
        source/core/board/NstBoardBtl6035052.cpp
        source/core/board/NstBoardBtlAx5705.cpp
        source/core/board/NstBoardBtlDragonNinja.cpp
        source/core/board/NstBoardBtlGeniusMerioBros.cpp
        source/core/board/NstBoardBtlMarioBaby.cpp
        source/core/board/NstBoardBtlPikachuY2k.cpp
        source/core/board/NstBoardBtlShuiGuanPipe.cpp
        source/core/board/NstBoardBtlSmb2a.cpp
        source/core/board/NstBoardBtlSmb2b.cpp
        source/core/board/NstBoardBtlSmb2c.cpp
        source/core/board/NstBoardBtlSmb3.cpp
        source/core/board/NstBoardBtlSuperBros11.cpp
        source/core/board/NstBoardBtlT230.cpp
        source/core/board/NstBoardBtlTobidaseDaisakusen.cpp
        source/core/board/NstBoardBxRom.cpp
        source/core/board/NstBoardCaltron.cpp
        source/core/board/NstBoardCamerica.cpp
        source/core/board/NstBoardCneDecathlon.cpp
        source/core/board/NstBoardCnePsb.cpp
        source/core/board/NstBoardCneShlz.cpp
        source/core/board/NstBoardCony.cpp
        source/core/board/NstBoard.cpp
        source/core/board/NstBoardCxRom.cpp
        source/core/board/NstBoardDiscrete.cpp
        source/core/board/NstBoardDreamtech.cpp
        source/core/board/NstBoardEvent.cpp
        source/core/board/NstBoardFb.cpp
        source/core/board/NstBoardFfe.cpp
        source/core/board/NstBoardFujiya.cpp
        source/core/board/NstBoardFukutake.cpp
        source/core/board/NstBoardFutureMedia.cpp
        source/core/board/NstBoardGouder.cpp
        source/core/board/NstBoardGxRom.cpp
        source/core/board/NstBoardHenggedianzi.cpp
        source/core/board/NstBoardHes.cpp
        source/core/board/NstBoardHosenkan.cpp
        source/core/board/NstBoardInlNsf.cpp
        source/core/board/NstBoardIremG101.cpp
        source/core/board/NstBoardIremH3001.cpp
        source/core/board/NstBoardIremHolyDiver.cpp
        source/core/board/NstBoardIremKaiketsu.cpp
        source/core/board/NstBoardIremLrog017.cpp
        source/core/board/NstBoardJalecoJf11.cpp
        source/core/board/NstBoardJalecoJf13.cpp
        source/core/board/NstBoardJalecoJf16.cpp
        source/core/board/NstBoardJalecoJf17.cpp
        source/core/board/NstBoardJalecoJf19.cpp
        source/core/board/NstBoardJalecoSs88006.cpp
        source/core/board/NstBoardJyCompany.cpp
        source/core/board/NstBoardKaiser.cpp
        source/core/board/NstBoardKasing.cpp
        source/core/board/NstBoardKayH2288.cpp
        source/core/board/NstBoardKayPandaPrince.cpp
        source/core/board/NstBoardKonamiVrc1.cpp
        source/core/board/NstBoardKonamiVrc2.cpp
        source/core/board/NstBoardKonamiVrc3.cpp
        source/core/board/NstBoardKonamiVrc4.cpp
        source/core/board/NstBoardKonamiVrc6.cpp
        source/core/board/NstBoardKonamiVrc7.cpp
        source/core/board/NstBoardKonamiVsSystem.cpp
        source/core/board/NstBoardMagicKidGoogoo.cpp
        source/core/board/NstBoardMagicSeries.cpp
        source/core/board/NstBoardMmc1.cpp
        source/core/board/NstBoardMmc2.cpp
        source/core/board/NstBoardMmc3.cpp
        source/core/board/NstBoardMmc4.cpp
        source/core/board/NstBoardMmc5.cpp
        source/core/board/NstBoardMmc6.cpp
        source/core/board/NstBoardNamcot163.cpp
        source/core/board/NstBoardNamcot175.cpp
        source/core/board/NstBoardNamcot340.cpp
        source/core/board/NstBoardNamcot34xx.cpp
        source/core/board/NstBoardNanjing.cpp
        source/core/board/NstBoardNihon.cpp
        source/core/board/NstBoardNitra.cpp
        source/core/board/NstBoardNtdec.cpp
        source/core/board/NstBoardOpenCorp.cpp
        source/core/board/NstBoardQj.cpp
        source/core/board/NstBoardRcm.cpp
        source/core/board/NstBoardRexSoftDb5z.cpp
        source/core/board/NstBoardRexSoftSl1632.cpp
        source/core/board/NstBoardRumbleStation.cpp
        source/core/board/NstBoardSachen74x374.cpp
        source/core/board/NstBoardSachenS8259.cpp
        source/core/board/NstBoardSachenSa0036.cpp
        source/core/board/NstBoardSachenSa0037.cpp
        source/core/board/NstBoardSachenSa72007.cpp
        source/core/board/NstBoardSachenSa72008.cpp
        source/core/board/NstBoardSachenStreetHeroes.cpp
        source/core/board/NstBoardSachenTca01.cpp
        source/core/board/NstBoardSachenTcu.cpp
        source/core/board/NstBoardSomeriTeamSl12.cpp
        source/core/board/NstBoardSubor.cpp
        source/core/board/NstBoardSunsoft1.cpp
        source/core/board/NstBoardSunsoft2.cpp
        source/core/board/NstBoardSunsoft3.cpp
        source/core/board/NstBoardSunsoft4.cpp
        source/core/board/NstBoardSunsoft5b.cpp
        source/core/board/NstBoardSunsoftDcs.cpp
        source/core/board/NstBoardSunsoftFme7.cpp
        source/core/board/NstBoardSuperGameBoogerman.cpp
        source/core/board/NstBoardSuperGameLionKing.cpp
        source/core/board/NstBoardSuperGamePocahontas2.cpp
        source/core/board/NstBoardTaitoTc0190fmc.cpp
        source/core/board/NstBoardTaitoTc0190fmcPal16r4.cpp
        source/core/board/NstBoardTaitoX1005.cpp
        source/core/board/NstBoardTaitoX1017.cpp
        source/core/board/NstBoardTengen.cpp
        source/core/board/NstBoardTengenRambo1.cpp
        source/core/board/NstBoardTxc.cpp
        source/core/board/NstBoardTxcMxmdhtwo.cpp
        source/core/board/NstBoardTxcPoliceman.cpp
        source/core/board/NstBoardTxcTw.cpp
        source/core/board/NstBoardTxRom.cpp
        source/core/board/NstBoardUnlA9746.cpp
        source/core/board/NstBoardUnlCc21.cpp
        source/core/board/NstBoardUnlEdu2000.cpp
        source/core/board/NstBoardUnlKingOfFighters96.cpp
        source/core/board/NstBoardUnlKingOfFighters97.cpp
        source/core/board/NstBoardUnlMortalKombat2.cpp
        source/core/board/NstBoardUnlN625092.cpp
        source/core/board/NstBoardUnlSuperFighter3.cpp
        source/core/board/NstBoardUnlTf1201.cpp
        source/core/board/NstBoardUnlWorldHero.cpp
        source/core/board/NstBoardUnlXzy.cpp
        source/core/board/NstBoardUxRom.cpp
        source/core/board/NstBoardVsSystem.cpp
        source/core/board/NstBoardWaixing.cpp
        source/core/board/NstBoardWaixingFfv.cpp
        source/core/board/NstBoardWaixingPs2.cpp
        source/core/board/NstBoardWaixingSecurity.cpp
        source/core/board/NstBoardWaixingSgz.cpp
        source/core/board/NstBoardWaixingSgzlz.cpp
        source/core/board/NstBoardWaixingSh2.cpp
        source/core/board/NstBoardWaixingZs.cpp
        source/core/board/NstBoardWhirlwind.cpp
        source/core/board/NstBoardZz.cpp
        )

set(LIBNESTOPIA_INPUT_SOURCES
        source/core/input/NstInpAdapter.cpp
        source/core/input/NstInpBandaiHyperShot.cpp
        source/core/input/NstInpBarcodeWorld.cpp
        source/core/input/NstInpCrazyClimber.cpp
        source/core/input/NstInpDoremikkoKeyboard.cpp
        source/core/input/NstInpExcitingBoxing.cpp
        source/core/input/NstInpFamilyKeyboard.cpp
        source/core/input/NstInpFamilyTrainer.cpp
        source/core/input/NstInpHoriTrack.cpp
        source/core/input/NstInpKonamiHyperShot.cpp
        source/core/input/NstInpMahjong.cpp
        source/core/input/NstInpMouse.cpp
        source/core/input/NstInpOekaKidsTablet.cpp
        source/core/input/NstInpPachinko.cpp
        source/core/input/NstInpPad.cpp
        source/core/input/NstInpPaddle.cpp
        source/core/input/NstInpPartyTap.cpp
        source/core/input/NstInpPokkunMoguraa.cpp
        source/core/input/NstInpPowerGlove.cpp
        source/core/input/NstInpPowerPad.cpp
        source/core/input/NstInpRob.cpp
        source/core/input/NstInpSuborKeyboard.cpp
        source/core/input/NstInpTopRider.cpp
        source/core/input/NstInpTurboFile.cpp
        source/core/input/NstInpZapper.cpp
)

set(LIBNESTOPIA_VSSYSTEM_SOURCES
        source/core/vssystem/NstVsRbiBaseball.cpp
        source/core/vssystem/NstVsSuperXevious.cpp
        source/core/vssystem/NstVsSystem.cpp
        source/core/vssystem/NstVsTkoBoxing.cpp
)

set(LIBNESTOPIA_SOURCES
        ${LIBNESTOPIA_CORE_SOURCES}
        ${LIBNESTOPIA_API_SOURCES}
        ${LIBNESTOPIA_BOARD_SOURCES}
        ${LIBNESTOPIA_INPUT_SOURCES}
        ${LIBNESTOPIA_VSSYSTEM_SOURCES}
        )

add_library(nestopia SHARED ${LIBNESTOPIA_SOURCES})